--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 
 <body>
-    <button id="canvas-demo">Canvas Demo</button>
-    <button id="DOM-demo">DOM Demo</button>
+    <!-- <button id="canvas-demo">Canvas Demo</button>
+    <button id="DOM-demo">DOM Demo</button> -->
+    <h2>Eevee</h2>
+    <canvas id="canvas-background"></canvas>
+    <!-- <script src="./src/scripts/game.js"></script> -->
     <script src="./dist/main.js"></script>
+    <img src="./src/images/bg-img.jpg" id="background-img">
 </body>
 
 </html>
