fixing stone collection

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <canvas id="canvas-background"></canvas>
     <!-- <script src="./src/scripts/game.js"></script> -->
     <script src="./dist/main.js"></script>
-    <img src="./src/images/bg-img.jpg" id="background-img">
+    <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
 </body>
 
 </html>
