--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <button id="DOM-demo">DOM Demo</button> -->
     <h2>Eevee</h2>
     <canvas id="canvas-background"></canvas>
+    <button
+    id="btnStart">Start</button>
     <!-- <script src="./src/scripts/game.js"></script> -->
     <script src="./dist/main.js"></script>
     <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
