start funct added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
     <!-- <button id="canvas-demo">Canvas Demo</button>
     <button id="DOM-demo">DOM Demo</button> -->
     <h2>Eevee</h2>
+    <div id="score-keeper">
+        <span>Score: 
+            <span id="score-count">0</span>
+        </span>
+    </div>
+
+    <div class="modal" id="startModal">
+        <div>
+            <button id="btnStart">Start</button>    
+        </div>
+
+        <!-- <div>
+            <button id="btnStart">Restart</button>
+        </div> -->
+    </div>
+
     <canvas id="canvas-background"></canvas>
-    <button
-    id="btnStart">Start</button>
     <!-- <script src="./src/scripts/game.js"></script> -->
     <script src="./dist/main.js"></script>
     <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
