WASD controlls added

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
     </div>
 
     <div class="modal" id="startModal">
-        <div>
-            <button id="btnStart">Start</button>    
+        <div class="start-modal">
+            <p>instructions</p>
+            <button id="btnStart" class="button">Start</button>    
         </div>
-
-        <!-- <div>
-            <button id="btnStart">Restart</button>
-        </div> -->
+    </div>
+    <div id ="endModal" class="restart-modal">
+        <h2>EEVEE HAS TRANSFORMED! YOU WIN!</h2>
+        <button id="btnReset" class="restart-button">Restart</button>
     </div>
 
-    <canvas id="canvas-background"></canvas>
+    <canvas id="canvas-background" class="canvas"></canvas>
     <!-- <script src="./src/scripts/game.js"></script> -->
     <script src="./dist/main.js"></script>
     <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
