--- a/index.html
+++ b/index.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="fullpage">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <title>Project Name</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+        integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+        
+    <title>Eevee Jump</title>
+    <link rel="icon" href="/src/images/ev.png">
 </head>
 
 <body>
     <!-- <button id="canvas-demo">Canvas Demo</button>
     <button id="DOM-demo">DOM Demo</button> -->
-    <h2>Eevee</h2>
-    <div id="score-keeper">
-        <span>Score: 
-            <span id="score-count">0</span>
-        </span>
-    </div>
+    <div class="page-container">
+        <img src="/src/images/Eevee-Jump.png" alt="eevee run logo" class="logo">
+        <div class="modal-canvas">
+            <div id="score-keeper">
+                <span>Score: 
+                    <span id="score-count">0</span>
+                </span>
+            </div>
+            <div class="modal" id="startModal">
+                <div class="start-modal">
+                    <p class="instructions">The objective of the is to collect 20 of the fire stones 
+                        inorder to evolve the Pokemon Eevee into Flareon, its fire evolutions. 
+                        Collect 20 stones to evolve Eevee! 
+                    </p>
+                    <p class="instructions">To move use W,A,D or the left, right, and up arrows.</p>
+                    <button id="btnStart" class="button">Start</button>    
+                </div>
+            </div>
+            <div id ="endModal" class="restart-modal">
+                <div class="win-container">
+                    <h2 class="win-message">EEVEE HAS TRANSFORMED! YOU WIN!</h2>
+                    <button id="btnReset" class="restart-button">Restart</button>
+                </div>
+            </div>
 
-    <div class="modal" id="startModal">
-        <div class="start-modal">
-            <p>instructions</p>
-            <button id="btnStart" class="button">Start</button>    
+            <canvas id="canvas-background" class="canvas"></canvas>
         </div>
-    </div>
-    <div id ="endModal" class="restart-modal">
-        <h2>EEVEE HAS TRANSFORMED! YOU WIN!</h2>
-        <button id="btnReset" class="restart-button">Restart</button>
-    </div>
-
-    <canvas id="canvas-background" class="canvas"></canvas>
+                    <div class="icon-container">
+                        <a class="icon" target="_blank" href="https://github.com/tnizam/Animetsy/">
+                            <i class="fab fa-github-alt"></i>
+                        </a>
+                        <a class="icon" target="_blank" href="https://www.linkedin.com/in/tahminanizam/">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a class="icon" target="_blank" href="https://tnizam.github.io/">
+                            <i class="fas fa-user-circle"></i>
+                        </a>
+                    </div>
+        </div>
     <!-- <script src="./src/scripts/game.js"></script> -->
     <script src="./dist/main.js"></script>
     <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
