--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </a>
                     </div>
         </div>
-    <!-- <script src="./src/scripts/game.js"></script> -->
+    <script src="./src/scripts/game.js"></script>
     <script src="./dist/main.js"></script>
     <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
 </body>
