--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <button id="canvas-demo">Canvas Demo</button>
     <button id="DOM-demo">DOM Demo</button> -->
     <div class="page-container">
-        <img src="/src/images/Eevee-Jump.png" alt="eevee run logo" class="logo">
+        <img src="./src/images/Eevee-Jump.png" alt="eevee run logo" class="logo">
         <div class="modal-canvas">
             <div id="score-keeper">
                 <span>Score: 
