fav-icon update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
         
     <title>Eevee Jump</title>
-    <link rel="icon" href="/src/images/ev.png" type="image/png">
+
+    <link rel="icon" href="./src/images/ev.png" type="image/png">
 </head>
 
 <body>
