--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <canvas id="canvas-background" class="canvas"></canvas>
         </div>
                     <div class="icon-container">
-                        <a class="icon" target="_blank" href="https://github.com/tnizam/Animetsy/">
+                        <a class="icon" target="_blank" href="https://github.com/tnizam/Eevee-Jump/">
                             <i class="fab fa-github-alt"></i>
                         </a>
                         <a class="icon" target="_blank" href="https://www.linkedin.com/in/tahminanizam/">
