--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="modal" id="startModal">
                 <div class="start-modal">
-                    <p class="instructions">The objective of the is to collect 20 of the fire stones 
+                    <p class="instructions">The objective of this game is to collect 20 of the fire stones 
                         inorder to evolve the Pokemon Eevee into Flareon, its fire evolutions. 
                         Collect 20 stones to evolve Eevee! 
                     </p>
