--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="modal" id="startModal">
                 <div class="start-modal">
                     <p class="instructions">The objective of this game is to collect 20 of the fire stones 
-                        inorder to evolve the Pokemon Eevee into Flareon, its fire evolutions. 
+                        in order to evolve the Pokemon Eevee into Flareon, its fire evolution. 
                         Collect 20 stones to evolve Eevee! 
                     </p>
                     <p class="instructions">To move use W,A,D or the left, right, and up arrows.</p>
