--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./dist/main.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
         integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
@@ -58,7 +58,7 @@
                     </div>
         </div>
     <script src="./src/scripts/game.js"></script>
-    <script src="./dist/main.js"></script>
+    <!-- <script src="./dist/main.js"></script> -->
     <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
 </body>
 
