--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
                 <div class="win-container">
                     <h2 class="win-message">EEVEE HAS TRANSFORMED! YOU WIN!</h2>
                     <button id="btnReset" class="restart-button">Restart</button>
+                    <button id="btnCont" class="cont-button">Continue</button>
+                </div>
+            </div>
+            <div id="gameLost" class="restart-modal">
+                <div class="win-container">
+                    <h2 class="win-message">YOU LOSE :( TRY AGAIN!!</h2>
+                    <button id="btnReset" class="restart-button">Restart</button>
                 </div>
             </div>
 
