--- a/index.html
+++ b/index.html
@@ -39,14 +39,18 @@
             <div id ="endModal" class="restart-modal">
                 <div class="win-container">
                     <h2 class="win-message">EEVEE HAS TRANSFORMED! YOU WIN!</h2>
+                    <p class="instructions" >You have been granted one extra point! You can press continue 
+                        to try and beat your high score on Eevee Jump with your brand new Flareon! 
+                        Or press restart to restart the game from the very beginning!
+                    </p>
                     <button id="btnReset" class="restart-button">Restart</button>
-                    <button id="btnCont" class="cont-button">Continue</button>
+                    <button id="btnCont" class="restart-button">Continue</button>
                 </div>
             </div>
-            <div id="gameLost" class="restart-modal">
-                <div class="win-container">
+            <div id="gameLost" class="lose-modal">
+                <div class="lose-container">
                     <h2 class="win-message">YOU LOSE :( TRY AGAIN!!</h2>
-                    <button id="btnReset" class="restart-button">Restart</button>
+                    <button id="playAgain" class="restart-button">Play Again</button>
                 </div>
             </div>
 
