--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h2 class="win-message">EEVEE HAS TRANSFORMED! YOU WIN!</h2>
                     <p class="instructions" >You have been granted one extra point! You can press continue 
                         to try and beat your high score on Eevee Jump with your brand new Flareon! 
-                        Or press restart to restart the game from the very beginning!
+                        Or press restart to play the game from the very beginning!
                     </p>
                     <button id="btnReset" class="restart-button">Restart</button>
                     <button id="btnCont" class="restart-button">Continue</button>
@@ -53,8 +53,7 @@
                     <button id="playAgain" class="restart-button">Play Again</button>
                 </div>
             </div>
-
-            <canvas id="canvas-background" class="canvas"></canvas>
+            <canvas id="canvas-background" class="canvas" ></canvas>
         </div>
                     <div class="icon-container">
                         <a class="icon" target="_blank" href="https://github.com/tnizam/Eevee-Jump/">
