game intro update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="start-modal">
                     <p class="instructions">The objective of this game is to collect 20 of the fire stones 
                         in order to evolve the Pokemon Eevee into Flareon, its fire evolution. 
-                        Collect 20 stones to evolve Eevee! 
+                        Avoid Team Rocket and collect all 20 stones to evolve Eevee! 
                     </p>
                     <p class="instructions">To move use W,A,D or the left, right, and up arrows.</p>
                     <button id="btnStart" class="button">Start</button>    
