--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="title" property="og:title" content="Eevee Jump" />
+    <meta name="image" property="og:image" content="https://media.giphy.com/media/l2XRuld6CrSCZxKHhb/giphy.gif" />
+    <meta name="description" property="og:description" 
+        content="Eevee Run is a classic runner game based on the Pokemon Eevee. 
+            The goal of this game is to collect 20 stones in total in order to evolve Eevee. " />
+    <meta name="author" content="Tahmina Nizam" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./src/styles/style.css" />
@@ -15,15 +21,8 @@
     <link rel="icon" href="./src/images/ev.png" type="image/png">
 </head>
 
-<<<<<<< HEAD
 <body>
 
-=======
-<body class=".body">
-    <!-- <button id="canvas-demo">Canvas Demo</button>
-    <button id="DOM-demo">DOM Demo</button> -->
-    <div class=parent-container>
->>>>>>> gh-pages
     <div class="page-container">
         <img src="./src/images/Eevee-Jump.png" alt="eevee run logo" class="logo">
         <div class="canvas">
@@ -75,18 +74,12 @@
                             <i class="fas fa-user-circle"></i>
                         </a>
                     </div>
-<<<<<<< HEAD
-        </div>
-    <script src="./src/scripts/game.js"></script>
-    <script src="./dist/main.js"></script>
-=======
             </div>
         <script src="./src/scripts/game.js"></script>
     </div>
     </div>
     <!-- <script src="./dist/main.js"></script> -->
     <!-- <img src="./src/images/bg-img.jpg" id="background-img"> -->
->>>>>>> gh-pages
 </body>
 
 </html>
