--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="title" property="og:title" content="Eevee Jump" />
-    <meta name="image" property="og:image" content="https://media.giphy.com/media/l2XRuld6CrSCZxKHhb/giphy.gif" />
+    <meta name="image" property="og:image" content="https://i.giphy.com/media/l2XRuld6CrSCZxKHhb/giphy.webp" />
     <meta name="description" property="og:description" 
         content="Eevee Run is a classic runner game based on the Pokemon Eevee. 
             The goal of this game is to collect 20 stones in total in order to evolve Eevee. " />
