--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="_" />
     <meta name="title" property="og:title" content="Eevee Jump" />
     <meta property="og:type" content="_" />
-    <meta name="image" property="og:image" content="https://media.giphy.com/media/l2XRuld6CrSCZxKHhb/giphy.gif" />
+    <meta name="image" property="og:image" content="https://media0.giphy.com/media/l2XRuld6CrSCZxKHhb/giphy.gif" />
     <meta name="description" property="og:description" content="Eevee Run is a classic runner game based on the Pokemon, Eevee. The goal of this game is to collect 20 stones in total in order to evolve Eevee. " />
     <meta name="author" content="Tahmina Nizam" />
 
